# DoraTool

./: .gitignore  Cargo.toml
logs/: dora-tool.log.2026-02-02  dora-tool.log.2026-02-04
src/: lib.rs  main.rs
src/core/usb/: manager.rs  mod.rs  models.rs  service.rs
src/infra/: config.rs  logs.rs  mod.rs  state.rs
src/server/: error.rs  mod.rs  response.rs  routes.rs
src/server/apis/: mod.rs  usb.rs  web.rs
