[package]
name = "doratool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.56", features = ["derive"] }
daemonize = "0.5.0"
nix = { version = "0.31.1", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
usb-resolver = "0.1.0"
